--- a/Assets/CSS/Style.css
+++ b/Assets/CSS/Style.css
@@ -99,7 +99,7 @@ header p {
 }
 
 #servicos {
-    isplay: flex;
+    display: flex;
     flex-direction: column;
     align-items: center;
     padding: 30px;
